cluster/apps/home/wiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  namespace: home
  annotations:
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://d33wubrfki0l68.cloudfront.net/e43d6fce615884aa5a3427f0ee46d1a3b8a0c7d2/6c3a5/assets/images/tool-icons/mkdocs.png"
    forecastle.stakater.com/network-restricted: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - wiki.${SECRET_DOMAIN}
  rules:
    - host: wiki.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki
                port:
                  number: 80
